# new-SUPER-AUTO-PETS

./: .clang-format  .gitignore  CMakeLists.txt  Qt_Creator_使用指南.md  README.md  startview_debug.txt  功能说明.md  战斗系统使用指南.md  战斗系统实现说明.md  运行指南.md
docs/: SAP 游戏演示视频大纲（6–8 分钟）.md  Super Auto Pets 程序设计文档.docx  build_instructions.md  overall_design.md  头文件接口汇总.md  生成EXE文件方法.md
docs/代码描述/: player部分代码.txt  qtShop部分代码.txt  商店UI部分.txt
src/: main.cpp  resources.qrc
src/engine/: BattleEngine.cpp  BattleEngine.hpp
src/model/: Food.cpp  Food.hpp  Pet.cpp  Pet.hpp  Player.cpp  Player.hpp  Shop.cpp  Shop.hpp  Skill.cpp  Skill.hpp
src/ui/: BattleView.cpp  BattleView.hpp  PetEncyclopediaView.cpp  PetEncyclopediaView.hpp  RecordsView.cpp  RecordsView.hpp  ShopView.cpp  ShopView.hpp  StartView.cpp  StartView.hpp  StartView.ui  qtbattleview.cpp  qtbattleview.h  qtbattleview.ui  qtshopview.cpp  qtshopview.h  qtshopview.ui  qtstartview.cpp  qtstartview.h  qtstartview.ui  resource.qrc  resultturn.cpp  resultturn.h  resultturn.ui
